<resources>
    <string name="app_name">Troll-E</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or_sign_in_using">or Sign In using</string>
    <string name="don_t_have_any_account_yet">Don’t have any account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="icon">Icon</string>
    <string name="retype_password">Retype Password</string>
    <string name="email">Email</string>
    <string name="or_sign_up_using">or Sign Up using</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="connect_to_trolley">Ready to shop? \n\nTo get started, scan the QR Code found on the trolley or manually input the Trolley ID using the button below</string>
    <string name="connection_success">Connection Success</string>
    <string name="happy_shopping">Happy Shopping</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="click_here_to_retry">Click <u>Here</u> to Retry</string>
    <string name="sign_up_underline"><u>Sign Up</u></string>
    <string name="sign_in_underline"><u>Sign In</u></string>
    <string name="username_dummy">John Doe</string>
    <string name="email_dummy">john.doe@gmail.com</string>
    <string name="see_shopping_history">See Shopping History</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_payment_method_s">Add Payment Method(s)</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="about_text">
        \t\t\t\t\tThis application aims to connect buyers with trolley that are already equipped with the Troll-E system. Later, the buyers will be connected to their digital wallet account and can pay for their purchases through this application. In addition, the history of previous purchases can also be accessed in the profile section.\n
        \t\t\t\t\tTroll-E itself is a system that aims to create an easy and automated shopping system. Thus, the convenience of shoppers in shopping can be increased, because they do not have to queue anymore when they want to complete the development process.\n
        \t\t\t\t\tThis system and application was created by a team that consist of 5 members as follow.
    </string>
    <string name="website">Website</string>
    <string name="youtube">YouTube</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trolley_empty">Your trolley is empty. \nStart shopping to see your item(s)</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="checkout">Checkout</string>
    <string name="payment_method">Payment Method</string>
    <string name="ovo">OVO</string>
    <string name="linkaja">LinkAja</string>
    <string name="shopeepay">ShopeePay</string>
    <string name="dana">Dana</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="sub_total">Sub-Total</string>
    <string name="sub_total_price_dummy">Rp 103.000,-</string>
    <string name="admin_fee">Admin Fee</string>
    <string name="admin_fee_price_dummy">Rp 6.500,-</string>
    <string name="grand_total">GRAND TOTAL</string>
    <string name="grand_total_price_dummy">Rp 109.500,-</string>
    <string name="payment_successful">Payment Successful!</string>
    <string name="invoice_number_dummy">7192381924</string>
    <string name="invoice">Invoice #</string>
    <string name="location_dummy">Hypermart Depok-ToS</string>
    <string name="time_dummy">14:32</string>
    <string name="back_to_home">Back to Home</string>
    <string name="payment_failed">Payment Failed :(</string>
    <string name="checkout_failed_message">
        It looks like that the payment method chosen is having an error.<br /><br /><br />
        Please kindly try again.
    </string>
    <string name="try_again">Try Again</string>
    <string name="member_1">Member 1 : Ivan Widjanarko</string>
    <string name="member_2">Member 2 : Haidar Hanif</string>
    <string name="member_3">Member 3 : Syarif Hidayat</string>
    <string name="member_4">Member 4 : M. As\'ad Muyassir</string>
    <string name="member_5">Member 5 : Jonathan Elloy S.</string>
    <string name="help_text">
        <li>First, the buyer must connect the application with the cart used through the Home page of the application. This can be done in 2 ways as follows.</li>\n
        \t\t\t\t\t\u25BA By scanning the barcode on the cart.\n
        \t\t\t\t\t\u25BA By entering the trolley ID manually.\n\n
        <li>Then, buyers will be directed to the Pay page which will later contain a Shopping List.</li>\n\n
        <li>Next, the buyer must point the barcode at the product he wants to buy on the camera provided on the cart, so the system can scan it.</li>\n\n
        <li>The scanned product will appear on the Shopping List. Repeat step 4 until the buyer has finished shopping.</li>\n\n
        <li>After that, press the Check Out button at the bottom of the Shopping List to see the total price to be paid.</li>\n\n
        <li>Buyers will be directed to the Checkout page. Determine the payment method you want to use and make sure that the total price paid is appropriate and the balance in the digital wallet is sufficient.</li>\n\n
        <li>Press the Pay button to pay for all purchased products. Wait until there is a notification stating that the payment has been successfully made.</li>\n\n
        <li>The shopping process has been completed and the cart connected to the app will be offline after a certain amount of time.</li>
    </string>
    <string name="shopping_list">Shopping List</string>
    <string name="pay">Pay</string>
    <string name="end_of_the_list">- end of the list -</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="youtube_link">https://bit.ly/troll-e_video</string>
    <string name="website_link">https://competent-wing-9bbbd5.netlify.app/</string>
    <string name="linkedin_link_ivan">https://www.linkedin.com/in/ivanwidjanarko/</string>
    <string name="linkedin_link_hanif">https://www.linkedin.com/in/haidarhnf/</string>
    <string name="linkedin_link_syarif">https://www.linkedin.com/in/skudou/</string>
    <string name="linkedin_link_aad">https://www.linkedin.com/in/m-asad-m/</string>
    <string name="linkedin_link_elloy">https://www.linkedin.com/in/jonathan-elloy-692433197/</string>
    <string name="welcome_to_troll_e">Welcome to Troll-E!</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="or">OR</string>
    <string name="manually_input_the_id">Manually input the ID</string>
    <string name="application_logo">Application Logo</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <string-array name="data_name">
        <item>Indomie Jumbo</item>
        <item>Energen Coklat</item>
        <item>Simba Choco Chips</item>
        <item>Mylanta</item>
        <item>Bon Cabe</item>
        <item>ABC Saus Extra Pedas</item>
        <item>DeliSaos</item>
        <item>Pepsodent Pasta Gigi</item>
        <item>Cotton Bud</item>
    </string-array>

    <integer-array name="data_count">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
    </integer-array>

    <integer-array name="data_price">
        <item>20000</item>
        <item>15000</item>
        <item>20000</item>
        <item>15000</item>
        <item>20000</item>
        <item>15000</item>
        <item>10000</item>
        <item>5000</item>
        <item>20000</item>
    </integer-array>

</resources>