<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
    android:id="@+id/group_navigation_bar"
    android:checkableBehavior="single">

    <item
        android:id="@+id/item_edit_profile"
        android:icon="@drawable/edit"
        android:title="@string/edit_profile" />

    <item
        android:id="@+id/item_add_payment_method"
        android:icon="@drawable/add"
        android:title="@string/add_payment_method_s" />

    <item
        android:id="@+id/item_about"
        android:icon="@drawable/about"
        android:title="@string/about" />

    <item
        android:id="@+id/item_help"
        android:icon="@drawable/help"
        android:title="@string/help" />

    <item
        android:id="@+id/item_sign_out"
        android:icon="@drawable/signout"
        android:title="@string/sign_out" />

    </group>

</menu>