<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/bgc"
    tools:context=".ui.side_menu.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="18dp"
        android:background="@color/bgc">

        <TextView
            android:id="@+id/text_view_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_text"
            android:textSize="14sp"
            android:padding="20dp"
            android:justificationMode="inter_word"
            android:textColor="@color/purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <HorizontalScrollView
                android:id="@+id/hsv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:measureAllChildren="false"
                android:scrollbars="none"
                tools:ignore="UselessParent">
                <LinearLayout
                    android:id="@+id/innerLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <LinearLayout
                        android:id="@+id/asthma_action_plan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_margin="10dp">
                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent" >
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ivan"
                                android:tag="@string/linkedin_link_ivan"
                                android:onClick="openBrowser"
                                android:contentDescription="@string/member_1"
                                tools:ignore="UsingOnClickInXml" />
                        </RelativeLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/controlled_medication"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_margin="10dp" >
                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent" >
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/hanif"
                                android:tag="@string/linkedin_link_hanif"
                                android:onClick="openBrowser"
                                android:contentDescription="@string/member_2"
                                tools:ignore="UsingOnClickInXml" />
                        </RelativeLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/as_needed_medication"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_margin="10dp" >
                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" >
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/syarif"
                                android:tag="@string/linkedin_link_syarif"
                                android:onClick="openBrowser"
                                android:contentDescription="@string/member_3"
                                tools:ignore="UsingOnClickInXml" />
                        </RelativeLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/rescue_medication"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_margin="10dp" >
                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent" >
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/aad"
                                android:tag="@string/linkedin_link_aad"
                                android:onClick="openBrowser"
                                android:contentDescription="@string/member_4"
                                tools:ignore="UsingOnClickInXml" />
                        </RelativeLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/your_symptoms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_margin="10dp" >
                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent" >
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/elloy"
                                android:tag="@string/linkedin_link_elloy"
                                android:onClick="openBrowser"
                                android:contentDescription="@string/member_5"
                                tools:ignore="UsingOnClickInXml" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view_youtube"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="25dp"
                android:src="@drawable/youtube"
                android:tag="@string/youtube_link"
                android:onClick="openBrowser"
                android:contentDescription="@string/youtube"
                tools:ignore="UsingOnClickInXml" />

            <ImageView
                android:id="@+id/image_view_website"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="25dp"
                android:src="@drawable/website"
                android:tag="@string/website_link"
                android:onClick="openBrowser"
                android:contentDescription="@string/website"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>