<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:background="@color/bgc"
    tools:context=".ui.pay.CheckoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:rotation="90"
            android:layout_marginEnd="25dp"
            android:src="@drawable/arrow"
            android:contentDescription="@string/back_arrow" />

        <TextView
            android:id="@+id/text_view_checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="75dp">

            <RadioButton
                android:id="@+id/radio_button_ovo"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/ovo"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layoutDirection="rtl"/>

            <RadioButton
                android:id="@+id/radio_button_linkaja"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/linkaja"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layoutDirection="rtl"/>

            <RadioButton
                android:id="@+id/radio_button_shopeepay"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/shopeepay"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layoutDirection="rtl"/>

            <RadioButton
                android:id="@+id/radio_button_dana"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/dana"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layoutDirection="rtl"/>

        </RadioGroup>

        <TextView
            android:id="@+id/text_view_payment_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_summary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_sub_total"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/sub_total"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_sub_total_price"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:text="@string/sub_total_price_dummy"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAlignment="textEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_admin_fee"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/admin_fee"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_admin_fee_price"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:text="@string/admin_fee_price_dummy"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAlignment="textEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/text_view_grand_total"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/grand_total"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_grand_total_price"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/grand_total_price_dummy"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <Button
                android:id="@+id/button_pay"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/sign_in"
                android:textColor="@color/bgc"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>