<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/profile"/>

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple"
            android:textAlignment="center"
            android:text="@string/username_dummy"
            android:textSize="24sp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textAlignment="center"
            android:text="@string/email_dummy"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/text_view_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple"
            android:textAlignment="center"
            android:text="@string/see_shopping_history"
            android:textSize="24sp"
            android:layout_marginTop="150dp"/>

    </LinearLayout>

</FrameLayout>